# DevFactory

./: .buildinfo  .gitignore  .gitmodules  CONTRIBUTING.md  README.en.md  README.md  docker-compose.yaml  genindex.html  intro.html  objects.inv  search.html  searchindex.js
.github/: pull_request_template.md
.github/workflows/: deploy.yml  (+7 more)
_sources/: intro.md
book/: _config.yml  _toc.yml  intro.md
cert/: .env.example  .gitignore  docker-compose.yaml
cert/backend/: .env.example  Dockerfile  pyproject.toml  requirements.txt  run.py
cert/backend/config/: default_periods.json
cert/backend/src/: main.py
cert/backend/src/assets/fonts/: license.txt
cert/backend/src/constants/: error_codes.py
cert/backend/src/models/: certificate.py  project.py
cert/backend/src/routers/: certificate.py  logging.py
cert/backend/src/services/: certificate_service.py
cert/backend/src/utils/: access_log.py  email_sender.py  notion_client.py  pdf_generator.py  template_content.py
certify/: docker-compose.yaml
docker_tutorial/: 00.docker_intro.html  00.pytorch_example.html  01.what_is_docker.html  02.image_and_container.html  03.docker-compose.html  04.ollama.html  05.webui.html  06.ollama_and_webui.html
docs/: 10th_plan.md  11th_plan.md  appendix.html  github_intro.html  pr-ground.html  pr-guide.html  pull_request_guide.html  webpage-plan.md
frontend/: Dockerfile  README.md  nginx.conf  package-lock.json  package.json
getcloser/: .env.example  docker-compose.dev.yml  docker-compose.yaml
platform/: .env.example  PLATFORM.md  docker-compose.dev.yml  docker-compose.yml
(+186 files in other folders)
