[project]
name = "backend"
version = "0.1.0"
description = "PseudoLab 수료증 발급 시스템 백엔드"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.12.15",
    "dotenv>=0.9.9",
    "fastapi>=0.109.1",
    "invisible-watermark>=0.2.0",
    "opencv-python>=4.11.0.86",
    "pillow>=10.1.0",
    "pydantic>=2.5.3",
    "pydantic-settings>=2.1.0",
    "pypdf>=6.5.0",
    "python-dotenv>=1.0.1",
    "python-multipart>=0.0.6",
    "reportlab>=4.0.7",
    "requests>=2.32.3",
    "uvicorn[standard]>=0.27.0",
]

[dependency-groups]
dev = [
    "aiosmtplib>=4.0.1",
]
